--- a/contact.css
+++ b/contact.css
@@ -1,20 +1,22 @@
 .contact-container {
     display: flex;
     justify-content: center;
-    margin-bottom: 143px;
+    /* margin-bottom: 143px; */
+    padding-bottom: 143px;
 
     background-color: rgb(255, 255, 255);
 }
 
 .contact-box {
-    /* width: 1100px; */
+    /* width: 1100px;  background: #21FF87;*/
     width: 71vw;
     height: 720px;
     border-radius: 10px;
-    background: #21FF87;
+    background: #92E154;
     background-image: url(img/contact-bg.svg);
     display: flex;
     justify-content: space-evenly;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
     
     padding: 61px 80px 61px 80px;
 }
@@ -55,9 +57,11 @@
     letter-spacing: 0.01em;
     color: #151517;
     text-align: center;
+    background: white;
 
-    margin-bottom: 40px;
-    padding-top: 72px;
+    /* margin-bottom: 40px; */
+    padding-bottom: 40px;
+    padding-top: 52px;
 }
 .contact-subtitle {
     font-family: 'Source Sans Pro';
@@ -67,8 +71,10 @@
     line-height: 30px;
     text-align: center;
     color: #000000;
+    background: white;
 
-    margin-bottom: 60px;
+    /* margin-bottom: 60px; */
+    padding-bottom: 60px;
 }
 
 
@@ -77,7 +83,8 @@
     font-family: 'Source Sans Pro';
     font-style: normal;
     font-weight: 600;
-    font-size: 1.6vw;
+    /* font-size: 1.6vw; */
+    font-size: 24px;
     line-height: 30px;
     letter-spacing: 0.02em;
     color: #161A25;
@@ -87,7 +94,8 @@
     font-family: 'Source Sans Pro';
     font-style: normal;
     font-weight: 600;
-    font-size: 1.16vw;
+    /* font-size: 1.16vw; */
+    font-size: 18px;
     line-height: 171.06%;
     /* or 31px */
     letter-spacing: 0.02em;
@@ -109,9 +117,15 @@
     border-radius: 5px;
     margin-bottom: 12px;
     border: none;
+
+    padding-left: 15px;
 }
 
 .contact-form input:focus {
+    outline: none;
+    border-width: 3px; ;
+    border-style: solid;
+    border-color: #777777;
 }
 .contact-form textarea {
     width: 26.4vw;
@@ -119,6 +133,16 @@
     background: #FFFFFF;
     border-radius: 5px;
     margin-bottom: 24px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top:20px;
+    resize: none;
+}
+.contact-form textarea:focus {
+    outline: none;
+    border-width: 3px;
+    border-style: solid;
+    border-color: #777777;
 }
 
 .contact-form label {
@@ -144,19 +168,174 @@
 
     background: #161A25;
     border-radius: 10px;
+    
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 30px;
+    text-align: center;
+    color: #FFFFFF;
 
-    
-        font-family: 'Source Sans Pro';
-        font-style: normal;
-        font-weight: 600;
-        font-size: 24px;
-        line-height: 30px;
-        text-align: center;
-    
-        color: #FFFFFF;
+    transition: .4s;
 }
 
-@media screen and (max-width: 415px){
+.contact-form button:hover {
+    transform: scale(1.03);
+}
+
+@media screen and (min-width:694px) and (max-width:1040px) {
+    .contact-info {
+            flex-direction: row;
+            flex-wrap: wrap;
+            width: 100%;
+            flex-basis: auto;
+            row-gap: 25px;
+            background: rgba(255, 255, 255, 0.10);
+            height: auto;
+            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+            padding-bottom: 20px;
+            padding-top: 20px;
+            justify-content: space-evenly;
+            border-radius: 10px;
+        }
+}
+@media screen and (min-width:619px) and (max-width:694px) {
+    .contact-info {
+            flex-direction: row;
+            flex-wrap: wrap;
+            width: 100%;
+            flex-basis: auto;
+            row-gap: 25px;
+            background: rgba(255, 255, 255, 0.10);
+            height: 700px;
+            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+            padding-bottom: 20px;
+            padding-top: 20px;
+            justify-content: space-evenly;
+            border-radius: 10px;
+        }
+}
+
+@media screen and (min-width:619px) and (max-width: 1040px){
+    
+    .contact-box {
+        flex-wrap: wrap;
+        width: 90%;
+        width: 71vw;
+        height: auto;
+        row-gap: 100px;
+        background-repeat: no-repeat;
+        padding: 40px 10px 40px 10px;
+    }
+    
+    .contact-info-sub-titles {
+        font-size: 90%;
+    }
+    .adress-container {
+        justify-content: start;
+        width: 40%;
+        height: 50%;
+        border-radius: 6px;
+        padding: 6px 4px 4px 6px;
+    }
+    .contact-form {
+        justify-content: center;
+        align-items: center;
+        flex-basis: auto;
+        width: 100%;
+        
+    }
+    .contact-form input {
+        min-width: 60vw;
+    }
+    .contact-form textarea {
+        min-width: 60vw;
+    }
+    .contact-form button {
+        min-width: 60vw;
+    }
+    .contact-subtitle {
+        display: flex;
+        justify-content: center;
+        
+    }
+    .contact-subtitle p {
+        width: 80%;
+        
+    }
+}
+
+
+@media screen and (min-width:500px) and (max-width:619px) {
+    .contact-box {
+            flex-wrap: wrap;
+            width: 90%;
+            width: 71vw;
+            height: auto;
+            row-gap: 100px;
+            background-repeat: no-repeat;
+            padding: 40px 10px 40px 10px;
+        }
+
+        .contact-info {
+            width: 100%;
+            flex-basis: auto;
+            row-gap: 25px;
+            background: rgba(255, 255, 255, 0.10);
+            height: auto;
+            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+            padding-bottom: 20px;
+            padding-top: 20px;
+            justify-content: space-evenly;
+            border-radius: 10px;
+        }
+    
+        .contact-info-sub-titles {
+            font-size: 90%;
+        }
+    
+        .adress-container {
+            justify-content: start;
+            height: 50%;
+            border-radius: 6px;
+            padding: 6px 4px 4px 6px;
+        }
+    
+        .contact-form {
+            justify-content: center;
+            align-items: center;
+            flex-basis: auto;
+            width: 100%;
+    
+        }
+    
+        .contact-form input {
+            min-width: 60vw;
+        }
+    
+        .contact-form textarea {
+            min-width: 60vw;
+        }
+    
+        .contact-form button {
+            min-width: 60vw;
+        }
+    
+        .contact-subtitle {
+            display: flex;
+            justify-content: center;
+    
+        }
+    
+        .contact-subtitle p {
+            width: 80%;
+    
+        }
+}
+
+
+@media screen and (max-width: 500px){
     .contact-title {
         font-size: 24px;
         line-height: 29px;
@@ -178,7 +357,7 @@
 
     .contact-box {
         width: 310px;
-        height: 1447px;
+        height: 1350px;
         flex-wrap: wrap;
         background-image: none;
         background-repeat: no-repeat;
@@ -240,7 +419,7 @@
         letter-spacing: 0.02em;
         color: #161A25;
 
-        margin-bottom: 70px;
+        margin-bottom: 10px;
         margin-top: 36px;
     }
     .contact-form label {
