--- a/asset-management.css
+++ b/asset-management.css
@@ -43,10 +43,10 @@
     color: #000000;
 }
 
+/* .asset-management-img {
+     width: 548px;  
+} */
 .asset-management-img {
-    /* width: 548px; */
-}
-.asset-management-img img {
     /* border: 5px solid #FFFFFF; */
     filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.25));
 }
@@ -56,9 +56,10 @@
     .asset-management-description {
         /* width: 548px; */
         padding-left: 25px;
+        
     }
 }
-@media screen and (max-width:924px) {
+@media screen and (max-width:1074px) {
     .asset-management-description {
         text-align: center;
     }
@@ -75,15 +76,22 @@
         justify-content: center;
     }
 } 
+@media screen and (max-width: 600px) {
+    .asset-management-img img{
+        width: 95%;
+
+    }
+    
+}
 
 
-@media screen and (max-width:415px) {
+@media screen and (max-width:500px) {
     .asset-management-img img{
         width: 312px;
     }
 
     .asset-management-info-secondary {
-        /* width: 80%; */
+        width: 90%;
         row-gap: 40px;
         flex-wrap: wrap;
         flex-flow: column-reverse;
@@ -102,7 +110,7 @@
         font-size: 16px;
         line-height: 170%;
         text-align: center;
-        width: 312px;
+        width: 90%;
     }
     .asset-management-container {
         /* background-image: url(img/asset-management-bg-mobile.svg); */
