--- a/second-thoughts.css
+++ b/second-thoughts.css
@@ -1,10 +1,11 @@
 .second-thoughts-container {
     /* height: 691px; */
     background-image: url(img/second-thoughts-bg.svg);
-    background-repeat: no-repeat;
-    /* background-size:contain; */
+    background-repeat:no-repeat;
+    background-size: 1700px;
     
     padding-top: 156px;
+    padding-bottom : 100px;
 }
 .second-thoughts-title {
     font-family: 'Fira Sans';
@@ -65,9 +66,11 @@
     transform: scale(1.1);
 }
     
-.phone-mail-cards:hover p {
-    /* color: #ffffff; */
+/*.phone-mail-cards:hover p {
+     color: #ffffff; 
 }
+*/
+
 .phone-mail-container p {
     font-family: 'Fira Sans';
     font-style: normal;
@@ -87,7 +90,7 @@
 /* social media */
 .social-media-container-main {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
 
     margin-bottom: 77px;
 }
@@ -97,6 +100,17 @@
     justify-content: space-between;
 }
 
+@media screen and (max-width:1536px) {
+    .second-thoughts-container {
+       
+        background-repeat: no-repeat;
+        background-size:auto;
+        padding-bottom : 0px;
+    }
+    .second-thoughts-subtitle {
+        /* width: 80%; */
+    }
+}
 
 
 
@@ -115,7 +129,7 @@
       width: 90%;
     }
 }
-@media screen and (max-width: 415px) {
+@media screen and (max-width: 500px) {
     .second-thoughts-title{
         font-size: 24px;
         line-height: 29px;
